--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
               <img class="img-fluid" src="09_IoT/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="10_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>10: machine building & end effectors</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="10_machine/thumbnail.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>11: computer programming</h3>
