Index page updates

--- a/01_index.html
+++ b/01_index.html
@@ -85,6 +85,16 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">***UPDATE***</h3>
+            <p>Since Week 1, my final project idea has changed from a kinetic wall to a <a href="finalproject.html">suminagashi drawing machine</a>! I'm keeping the original inspiration below for reference in case it inspires anyone from future classes ;)</p> 
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
             <h3 class="h3">Final Project Inspiration and Story</h3>
             <p>I spent a lot of time in the new SEC building last semester and was amused everytime I walked by this interactive art installation. (Shoutout to my dad in the GIF!) I was intrigued by the way the installation could sense movement and essentially create a mirror of me in another form. It made me wonder if this concept could go beyond entertainment and convey a more impactful message. I also came across another interactive kinetic installation that invites the viewer to reflect on the growing plastic problem in our oceans by projecting their reflection as plastic floating in the water.</p>
           </div>
@@ -106,6 +116,7 @@
           </div>
         </div>
       </div>
+
 
       <div class="container">
         <div class="row mb-4 align-items-center">
