--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
 
 
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="150">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="finalproject.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>final project</h3>
+              </div>
+              <img class="img-fluid" src="finalproject/thumbnail.jpg">
+            </a>
+          </div>
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="01_index.html" class="item-wrap fancybox">
               <div class="work-info">
@@ -162,7 +170,7 @@
             </a>
           </div>
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="10_index.html" class="item-wrap fancybox">
+            <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>10: machine building & end effectors</h3>
               </div>
@@ -170,7 +178,7 @@
             </a>
           </div>
           <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="10_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>11: computer programming</h3>
               </div>
@@ -181,14 +189,6 @@
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>12: wildcard</h3>
-              </div>
-              <img class="img-fluid" src="comingsoon.png">
-            </a>
-          </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>final project</h3>
               </div>
               <img class="img-fluid" src="comingsoon.png">
             </a>
