Added final project page

--- a/finalproject.html
+++ b/finalproject.html
@@ -75,84 +75,86 @@
     <section class="section">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+          <div class="col-md-12" data-aos="fade-up">
+            <h2>Final Project</h2>
           </div>
         </div>
       </div>
 
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/img_1_big.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="sticky-content">
-                <h3 class="h3">Boxed Water</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
 
-                <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
-
-                </div>
-
-                <h4 class="h4 mb-3">What I did</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
-                </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
       <div class="container">
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Jean Hicks</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Chris Stanworth</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Inspiration and Project Goal</h3>
+            <p>For the final project, I collaborated with <a href="https://rebeccabrand.github.io/ps-70-fall-22/index.html">Rebecca Brand</a>. We were inspired by the Japanese art of Suminagashi 墨流し, also known as “floating ink”. Suminagashi is the process of dripping ink carefully onto a still water surface, creating delicate swirls, and then absorbing the ink pattern by laying a sheet of white rice paper on top of the ink covered water to create a beautiful marbling effect.</p>
+            <p>Our goal was to fabricate a drawing/inking machine that used input data to create a personalized marbling design. We also used many resources from this <a href="https://www.youtube.com/watch?v=XYqx5wg4oLU">CNC Drawing machine tutorial</a>.</p>
           </div>
-          <div class="swiper-pagination"></div>
         </div>
-
       </div>
-    </section><!-- End Testimonials Section -->
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="finalproject/sumi1.gif" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="finalproject/sumi2.gif" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Materials</h3>
+            <li><a href="https://www.amazon.com/gp/product/B003W2PX8M/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B003W2PX8M&linkCode=as2&tag=metashops&linkId=FKTD3E7HK3U6UT3G">Marbling Ink Kit</a></li>
+            <li><a href ="https://www.amazon.com/Art-Advantage-Rice-Paper-sheets-Pack/dp/B0027A39W2/ref=cm_cr_arp_d_pl_foot_top?ie=UTF8&th=1">Rice paper</a></li>
+            <li><a href="https://www.amazon.com/Twotrees-Sliding-Guideway-Bearing-Printer/dp/B07SN6MT6T/ref=sr_1_3?tag=diymachines04-20&dchild=1&keywords=linear+rail+300mm+MGN12H&qid=1617007286&sr=8-3&geniuslink=true&th=1">Linear rail</a></li>
+            <li><a href="https://www.amazon.com/gp/product/B00009R7E0/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B00009R7E0&linkCode=as2&tag=metashops&linkId=JLY7CGYSWMTRZGM5">Photo Flo</a></li>
+            <li>Acrylic panels</li>
+            <li><a href="https://www.amazon.com/Weld-Acrylic-Plastic-Cement-Applicator/dp/B0149IG548/ref=sr_1_3?crid=2BV8MKR5WKD20&keywords=acrylic+weld&qid=1667508456&qu=eyJxc2MiOiI0LjQxIiwicXNhIjoiMy41NSIsInFzcCI6IjMuMDYifQ%3D%3D&sprefix=acrylic+weld%2Caps%2C107&sr=8-3">Acrylic weld</a></li>
+            <li>Syringe</l
+            <li>2 x NEMA 17 bipolar stepper motor + A4988 driver</li>
+            <li>1 x 28BYJ-48 stepper motor + ULN2003 driver</li>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Tools and techniques</h3>
+            <li>3D design and printing</li>
+            <li>Microcontroller programmming (Arduino)</li>
+            <li>Electronic input and output</li>
+            <li>Hand tools</li>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Prototypes</h3>
+            <p>During the <a href="09_index.html">Week 9</a> & <a href="10_index.html">Week 10</a> assignments, we started assembling parts of the suminagashi machine. Feel free to view the assignments for those weeks for more process details!</p>
+          </div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <video width="600" controls>
+              <source src="09_IoT/stepper_uiv2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
+            <figcaption>WEEK 9: Created a syringe dispenser that is controlled through a web interface.</figcaption>
+          </div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+             <video width="600" controls>
+               <source src="10_machine/limit-switch.mp4" type="video/mp4">
+             </video>
+             <figcaption>Week 10: Built the x-axis arm of the sumninagashi machine.</figcaption>
+          </div>
+        </div>
+      </div>
 
   </main><!-- End #main -->
   
